membuat section why-us

--- a/index.html
+++ b/index.html
@@ -101,6 +101,72 @@
             </div>
         </header>
         <!-- End header -->
+
+        <!-- Start section why us -->
+        <section class="mt-5 p-5 why-us-container">
+            <div class="text-center title-text">
+                <p class="sub-text">SPECIAL BENEFIT FOR YOU</p>
+                <h3 class="big-text">Why Should Choose Us?</h3>
+            </div>
+            <div class="row mt-5">
+                <div class="col-3">
+                    <div class="bg-white text-center card border-0 rounded" style="width: 18rem;">
+                        <div class="card-body p-3">
+                            <img src="img/icons/discount.png" alt="">
+                            <h6 class="mt-3">Extra Discounts</h6>
+                            <p class="card-text">Get your special discount by using our reservation</p>
+                        </div>
+                        <div class="d-block mt-5">
+                            <button class="btn btn-view-details py-3">View Details <img class="view-details-icon ms-2"
+                                    src="img/icons/angle-right.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="bg-white text-center card border-0 rounded" style="width: 18rem;">
+                        <div class="card-body p-3">
+                            <img src="img/icons/discount.png" alt="">
+                            <h6 class="mt-3">Come and Eat</h6>
+                            <p class="card-text">Get your own table quickly & without waiting in line</p>
+                        </div>
+                        <div class="d-block mt-5">
+                            <button class="btn btn-view-details py-3">View Details <img class="view-details-icon ms-2"
+                                    src="img/icons/angle-right.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="bg-white text-center card border-0 rounded" style="width: 18rem;">
+                        <div class="card-body p-3">
+                            <img src="img/icons/discount.png" alt="">
+                            <h6 class="mt-3">No Extra Fee</h6>
+                            <p class="card-text">Get tax free if you want to order food and make a reservation</p>
+                        </div>
+                        <div class="d-block mt-5">
+                            <button class="btn btn-view-details py-3">View Details <img class="view-details-icon ms-2"
+                                    src="img/icons/angle-right.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="bg-white text-center card border-0 rounded" style="width: 18rem;">
+                        <div class="card-body p-3">
+                            <img src="img/icons/discount.png" alt="">
+                            <h6 class="mt-3">Guaranteed Cleanliness</h6>
+                            <p class="card-text">We ensure the cleanliness of the place as well as the food</p>
+                        </div>
+                        <div class="d-block mt-5">
+                            <button class="btn btn-view-details py-3">View Details <img class="view-details-icon ms-2"
+                                    src="img/icons/angle-right.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Start section why us -->
     </main>
 
 
